@@ -685,19 +685,10 @@
                         </row>
                         <row id="xvidcap-prefs-TBL-minimize-to-tray">
                             <entry>
-                                <para>
-                                    Minimize to System Tray
-                                </para>
+                                <para>Minimizza nel vassoio di sistema</para>
                             </entry>
                             <entry>
-                                <para>
-                                    Check this to make <application>xvidcap</application> minimize to the
-				    system tray on starting a recording session. In that case the main
-				    control panel will hide and the frame drop monitor will apear in the
-				    system tray. A right-click on it will allow you to pause or stop the
-				    recording session. On stopping the main control window will be
-				    displayed again.
-                                </para>
+                                <para>Selezionare questa opzione per minimizzare <application>xvidcap</application> nel vassoio di sistema all'avvio di una sessione di registrazione. In tal caso, il pannello di controllo principale sarà nascosto e il monitor dei fotogrammi scartati apparirà nel vassoio di sistema. Un clic destro su di esso permetterà di mettere in pausa o fermare la sessione di registrazione. Se si ferma la registrazione la finestra principale sarà visualizzata nuovamente.</para>
                             </entry>
                         </row>
                         <row id="xvidcap-prefs-TBL-rescale">
